# FullPythonWebsite

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rxconfig.py
FullPythonWebsite/: FullPythonWebsite.py
src/: main.py
test/: test_main.py
