[tool.poetry]
name = "FullPythonWebsite"
version = "0.0.0"
description = "Building full website with python"
authors = ["Robert Josef Domogalla"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
black = "^24.10.0"
flake8 = "^7.1.1"
pylint = "^3.3.2"
mypy = "^1.13.0"
pytest = "^8.3.4"
reflex = "^0.6.6.post2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = ["build", "dist", ".venv"]

[tool.mypy]
strict = true
